SlangNet.Bindings/Generated/Slang.cs


    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetOptimizationLevel"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetOptimizationLevel", ExactSpelling = true)]
    public static extern void SetOptimizationLevel([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangOptimizationLevel level);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetOutputContainerFormat"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetOutputContainerFormat", ExactSpelling = true)]
    public static extern void SetOutputContainerFormat([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangContainerFormat format);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetPassThrough"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetPassThrough", ExactSpelling = true)]
    public static extern void SetPassThrough([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangPassThrough passThrough);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDiagnosticCallback"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDiagnosticCallback", ExactSpelling = true)]
    public static extern void SetDiagnosticCallback([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("SlangDiagnosticCallback")] IntPtr callback, [NativeTypeName("const void *")] void* userData);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetWriter"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetWriter", ExactSpelling = true)]
    public static extern void SetWriter([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangWriterChannel channel, ISlangWriter* writer);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetWriter"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetWriter", ExactSpelling = true)]
    public static extern ISlangWriter* GetWriter([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangWriterChannel channel);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddSearchPath"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddSearchPath", ExactSpelling = true)]
    public static extern void AddSearchPath([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const char *")] sbyte* searchDir);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddPreprocessorDefine"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddPreprocessorDefine", ExactSpelling = true)]
    public static extern void AddPreprocessorDefine([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const char *")] sbyte* key, [NativeTypeName("const char *")] sbyte* value);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.ProcessCommandLineArguments"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spProcessCommandLineArguments", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int ProcessCommandLineArguments([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const char *const *")] sbyte** args, int argCount);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTranslationUnit"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTranslationUnit", ExactSpelling = true)]
    public static extern int AddTranslationUnit([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, SlangSourceLanguage language, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetDefaultModuleName"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetDefaultModuleName", ExactSpelling = true)]
    public static extern void SetDefaultModuleName([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const char *")] sbyte* defaultModuleName);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.TranslationUnit_addPreprocessorDefine"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spTranslationUnit_addPreprocessorDefine", ExactSpelling = true)]
    public static extern void TranslationUnit_addPreprocessorDefine([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* key, [NativeTypeName("const char *")] sbyte* value);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTranslationUnitSourceFile"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTranslationUnitSourceFile", ExactSpelling = true)]
    public static extern void AddTranslationUnitSourceFile([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* path);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTranslationUnitSourceString"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTranslationUnitSourceString", ExactSpelling = true)]
    public static extern void AddTranslationUnitSourceString([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* path, [NativeTypeName("const char *")] sbyte* source);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddLibraryReference"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddLibraryReference", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int AddLibraryReference([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, [NativeTypeName("const void *")] void* libData, [NativeTypeName("size_t")] UIntPtr libDataSize);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTranslationUnitSourceStringSpan"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTranslationUnitSourceStringSpan", ExactSpelling = true)]
    public static extern void AddTranslationUnitSourceStringSpan([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* path, [NativeTypeName("const char *")] sbyte* sourceBegin, [NativeTypeName("const char *")] sbyte* sourceEnd);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddTranslationUnitSourceBlob"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddTranslationUnitSourceBlob", ExactSpelling = true)]
    public static extern void AddTranslationUnitSourceBlob([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* path, ISlangBlob* sourceBlob);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.FindProfile"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spFindProfile", ExactSpelling = true)]
    public static extern SlangProfileID FindProfile([NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.FindCapability"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spFindCapability", ExactSpelling = true)]
    public static extern SlangCapabilityID FindCapability([NativeTypeName("SlangSession *")] IGlobalSession* session, [NativeTypeName("const char *")] sbyte* name);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddEntryPoint"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddEntryPoint", ExactSpelling = true)]
    public static extern int AddEntryPoint([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* name, SlangStage stage);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.AddEntryPointEx"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spAddEntryPointEx", ExactSpelling = true)]
    public static extern int AddEntryPointEx([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int translationUnitIndex, [NativeTypeName("const char *")] sbyte* name, SlangStage stage, int genericArgCount, [NativeTypeName("const char **")] sbyte** genericArgs);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetGlobalGenericArgs"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetGlobalGenericArgs", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SetGlobalGenericArgs([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int genericArgCount, [NativeTypeName("const char **")] sbyte** genericArgs);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTypeNameForGlobalExistentialTypeParam"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTypeNameForGlobalExistentialTypeParam", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SetTypeNameForGlobalExistentialTypeParam([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int slotIndex, [NativeTypeName("const char *")] sbyte* typeName);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.SetTypeNameForEntryPointExistentialTypeParam"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spSetTypeNameForEntryPointExistentialTypeParam", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int SetTypeNameForEntryPointExistentialTypeParam([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, int entryPointIndex, int slotIndex, [NativeTypeName("const char *")] sbyte* typeName);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.Compile"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spCompile", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int Compile([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetDiagnosticOutput"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetDiagnosticOutput", ExactSpelling = true)]
    [return: NativeTypeName("const char *")]
    public static extern sbyte* GetDiagnosticOutput([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request);

    /// <include file='Slang.xml' path='doc/member[@name="Slang.GetDiagnosticOutputBlob"]/*' />
    [DllImport("slang", CallingConvention = CallingConvention.Cdecl, EntryPoint = "spGetDiagnosticOutputBlob", ExactSpelling = true)]
    [return: NativeTypeName("SlangResult")]
    public static extern int GetDiagnosticOutputBlob([NativeTypeName("SlangCompileRequest *")] ICompileRequest* request, ISlangBlob** outBlob);
